force-app/main/default/objects/Account/fields/Cart_Items__c.field-meta.xml
<CustomField>
    <fullName>Cart_Items__c</fullName>
    <description>Live mirror of this shopper&apos;s cart (see cartService.js), kept in sync automatically: updated whenever they add, change the quantity of, or remove an item, and whenever they log in with items already in their browser cart. Not meant to be hand-edited — the storefront overwrites it on every cart change.</description>
    <label>Current Cart Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>