force-app/main/default/objects/Account/fields/Customer_Statu_s__c.field-meta.xml
<CustomField>
    <fullName>Customer_Statu_s__c</fullName>
    <label>Customer Statu_s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>