force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Status</label>
    <type>Checkbox</type>
</CustomField>