force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Login username for the custom storefront login (Customer Account Detail record type). Set by LoginCredentialsController.signUp, checked by logIn. Not the same as any Contact&apos;s email — this is the Account&apos;s own login identity.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>