force-app/main/default/objects/Account/fields/Last_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Won_Date__c</fullName>
    <label>Last Won Date</label>
    <type>Date</type>
</CustomField>