force-app/main/default/objects/Account/fields/Loyalty_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The live, current loyalty point balance for a Customer Account Detail record. Maintained by Apex (LoyaltyService) — never edited directly. See Feature Expansion Plan §2.</description>
    <label>Loyalty Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>