force-app/main/default/objects/Account/fields/Open_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Count__c</fullName>
    <label>OpenOpportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>