force-app/main/default/objects/Account/fields/Password_Text__c.field-meta.xml
<CustomField>
    <fullName>Password_Text__c</fullName>
    <description>Stored unencrypted by explicit design (same decision as the original Login_Credentials__c object this replaces) — not a security best practice, but intentional so admins can view a shopper&apos;s password directly on the record.</description>
    <label>Password (Plain Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>