force-app/main/default/objects/Account/fields/Total_Application_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Application_Fees__c</fullName>
    <label>Total Application Fees</label>
    <summarizedField>College_Applications__c.Fee__c</summarizedField>
    <summaryForeignKey>College_Applications__c.College_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>