force-app/main/default/objects/Account/fields/Total_College_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_College_Applications__c</fullName>
    <label>Total College Applications</label>
    <summaryForeignKey>College_Applications__c.College_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>