force-app/main/default/objects/Account/recordTypes/Admissions.recordType-meta.xml
<RecordType>
    <fullName>Admissions</fullName>
    <active>true</active>
    <description>Account record type for Admissions department</description>
    <label>Admissions</label>
</RecordType>