force-app/main/default/objects/Account/recordTypes/Customer_Account_Details.recordType-meta.xml
<RecordType>
    <fullName>Customer_Account_Details</fullName>
    <active>true</active>
    <label>Customer Account Details</label>
</RecordType>