force-app/main/default/objects/Account/listViews/Education_Colleges.listView-meta.xml
<ListView>
    <fullName>Education_Colleges</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <label>Education Colleges</label>
</ListView>